simulated and plotted DRR and PF scheduling of 2 D2D pairs and 1RB in full buffer UDP scenario: PF is broken?

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -6,7 +6,7 @@ debug-on-errors = false
 tkenv-default-config = 
 sim-time-limit=5s
 warmup-period=0s
-repeat = 3
+repeat = 1
 **.routingRecorder.enabled = false
 
 
@@ -35,17 +35,8 @@ seed-set = ${repetition}
 
 ############### AMC MODULE PARAMETERS ###############
 **.rbAllocationType = "localized"
-**.deployer.numRbDl = 50
-**.deployer.numRbUl = 50
-**.numBands = 50
 
 
-# ----------------------------------------------------------------------------- #
-# Config "MultiplePairs"
-#
-# Do NOT run this config! It serves as base configuration for "MultiplePairs-D2D" and "MultiplePairs-Infra" configurations (see below).
-# It includes N pairs of UEs served by one eNodeB. UEs are far from the eNB (~50m), but close to each other (20m)  
-#
 [Config Base]
 network=FrequencyNetwork
 
@@ -55,34 +46,26 @@ network=FrequencyNetwork
 *.eNodeB.mobility.initialY = 300m
 
 ### UEs configuration ###
-*.numUeCell = 0
-*.numUeD2DTx = 5#${numPairs=5,20,50}
-*.numUeD2DRx = 5#${numPairs}
-
 *.ue*[*].macCellId = 1
 *.ue*[*].masterId = 1
 *.ue*[*].mobility.initFromDisplayString = false
+
+*.ueCell*[*].mobility.initialX = uniform(290m, 310m)
+*.ueCell*[*].mobility.initialY = uniform(290m, 310m)
 
 # Place D2D endpoints far from the eNodeB (~50m) and close to each other
 *.ueD2D*[*].mobility.initialX = uniform(290m,310m)
 *.ueD2D*[*].mobility.initialY = uniform(340m,350m)
 
 
-# ----------------------------------------------------------------------------- #
-# Config "MultiplePairs-UDP-Infra"
-#
-# In this configuration, UEs run a VoIP application (using UDP as transport layer protocol)
-# They communicate using the traditional infrastructure mode (two-hop path through the eNodeB)
-#
-[Config SanityCheck]
+[Config UDPTraffic]
 extends=Base
 
 ### Traffic configuration ###
-*.ueD2D*[*].numUdpApps = 1
+*.ue*[*].numUdpApps = 1
 
-# Traffic.
 **.ueCell[*].udpApp[0].typename = "UDPBasicApp"
-**.ueCell[*].udpApp[0].destAddresses = "ueCellRx[" + string(ancestorIndex(1)) + "]"
+**.ueCell[*].udpApp[0].destAddresses = "server"
 **.ueCell[*].udpApp[0].destPort = 1000
 **.ueCell[*].udpApp[0].sendInterval = 0.00025s # 0.25ms
 **.ueCell[*].udpApp[0].messageLength = 65.507B
@@ -97,14 +80,43 @@ extends=Base
 **.ueD2DRx[*].udpApp[0].typename = "UDPSink"
 **.ueD2DRx[*].udpApp[0].localPort = 1000
 
-**.ueCellRx[*].udpApp[0].typename = "UDPSink"
-**.ueCellRx[*].udpApp[0].localPort = 1000
-
 # Enable D2D for the eNodeB and the UEs involved in direct communications.
 *.eNodeB.d2dCapable = true
-*.ueD2D*[0].d2dCapable = true
+*.ueD2D*[*].d2dCapable = true
+*.ueCell*[*].d2dCapable = false
 **.amcMode = "D2D"
 
 *.eNodeB.lteNic.phy.enableD2DCqiReporting = true
 **.usePreconfiguredTxParams = false
 **.d2dCqi = 7
+
+
+[Config NoReusePF]
+extends=UDPTraffic
+*.numUeCell = 0
+*.numUeD2DTx = 2
+*.numUeD2DRx = 2
+
+**.deployer.numRbDl = 1
+**.deployer.numRbUl = 1
+**.numBands = 1
+**.schedulingDisciplineUl = "PF"
+**.schedulingDisciplineUl = "PF"
+
+
+*.ueD2DTx[0].mobility.initialX = 400m
+*.ueD2DTx[0].mobility.initialY = 250m
+*.ueD2DRx[0].mobility.initialX = 410m
+*.ueD2DRx[0].mobility.initialY = 250m
+
+*.ueD2DTx[1].mobility.initialX = 200m
+*.ueD2DTx[1].mobility.initialY = 350m
+*.ueD2DRx[1].mobility.initialX = 190m
+*.ueD2DRx[1].mobility.initialY = 350m
+
+
+[Config NoReuseDRR]
+extends=NoReusePF
+
+**.schedulingDisciplineUl = "DRR"
+**.schedulingDisciplineUl = "DRR"
