--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -101,7 +101,7 @@ extends=UDPTraffic
 **.deployer.numRbUl = 1
 **.numBands = 1
 **.schedulingDisciplineUl = "PF"
-**.schedulingDisciplineUl = "PF"
+**.schedulingDisciplineDl = "PF"
 
 
 *.ueD2DTx[0].mobility.initialX = 400m
@@ -119,4 +119,35 @@ extends=UDPTraffic
 extends=NoReusePF
 
 **.schedulingDisciplineUl = "DRR"
-**.schedulingDisciplineUl = "DRR"
+**.schedulingDisciplineDl = "DRR"
+
+
+[Config NoReuseMaxCI]
+extends=NoReusePF
+
+**.schedulingDisciplineUl = "MAXCI"
+**.schedulingDisciplineDl = "MAXCI"
+
+
+[Config YesReuse]
+extends=NoReuseDRR
+
+**.schedulingDisciplineUl = "ALLOCATOR_BESTFIT"
+**.schedulingDisciplineDl = "ALLOCATOR_BESTFIT"
+**.buildConflictGraph = true
+**.conflictGraphUpdatePeriod = 1s
+**.conflictGraphThreshold = -90   #dB
+
+
+[Config YesReuseClose]
+extends=YesReuse
+
+*.ueD2DTx[0].mobility.initialX = 400m
+*.ueD2DTx[0].mobility.initialY = 250m
+*.ueD2DRx[0].mobility.initialX = 410m
+*.ueD2DRx[0].mobility.initialY = 250m
+
+*.ueD2DTx[1].mobility.initialX = 400m
+*.ueD2DTx[1].mobility.initialY = 240m
+*.ueD2DRx[1].mobility.initialX = 410m
+*.ueD2DRx[1].mobility.initialY = 240m
