--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -134,9 +134,10 @@ extends=NoReuseDRR
 
 **.schedulingDisciplineUl = "ALLOCATOR_BESTFIT"
 **.schedulingDisciplineDl = "ALLOCATOR_BESTFIT"
-**.buildConflictGraph = true
+**.buildConflictGraph = true # Edges between UE Vertices if received power > threshold. If edge exists,
+							 # the nodes are conflicting and won't share a resource block.
 **.conflictGraphUpdatePeriod = 1s
-**.conflictGraphThreshold = -90   #dB
+**.conflictGraphThreshold = -20   # dB threshold to create edge between vertices.
 
 
 [Config YesReuseClose]
