--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -14,7 +14,7 @@ repeat = 1
 output-scalar-file = ${resultdir}/${configname}/${repetition}.sca
 output-vector-file = ${resultdir}/${configname}/${repetition}.vec
 seed-set = ${repetition}
-**.vector-recording = true
+**.vector-recording = false
 
 ################ Channel parameters #####################
 **.channelControl.pMax = 10W
@@ -40,12 +40,22 @@ seed-set = ${repetition}
 [Config Base]
 network=FrequencyNetwork
 
-### eNodeBs configuration ###
+### Number of UEs.
+*.numUeCell = 0
+*.numUeD2DTx = 2
+*.numUeD2DRx = 2
+
+### One resource. 
+**.deployer.numRbDl = 1
+**.deployer.numRbUl = 1
+**.numBands = 1
+
+### eNodeB configuration.
 *.eNodeB.mobility.initFromDisplayString = false
 *.eNodeB.mobility.initialX = 300m
 *.eNodeB.mobility.initialY = 300m
 
-### UEs configuration ###
+### UE configuration.
 *.ue*[*].macCellId = 1
 *.ue*[*].masterId = 1
 *.ue*[*].mobility.initFromDisplayString = false
@@ -53,15 +63,62 @@ network=FrequencyNetwork
 *.ueCell*[*].mobility.initialX = uniform(290m, 310m)
 *.ueCell*[*].mobility.initialY = uniform(290m, 310m)
 
-# Place D2D endpoints far from the eNodeB (~50m) and close to each other
-*.ueD2D*[*].mobility.initialX = uniform(290m,310m)
-*.ueD2D*[*].mobility.initialY = uniform(340m,350m)
+## Place D2D UEs far from the eNodeB...
+*.ueD2DTx[0].mobility.initialX = 350m
+*.ueD2DTx[0].mobility.initialY = 300m
+*.ueD2DRx[0].mobility.initialX = 360m
+*.ueD2DRx[0].mobility.initialY = 300m
+
+*.ueD2DTx[1].mobility.initialX = 350m
+*.ueD2DTx[1].mobility.initialY = 310m
+*.ueD2DRx[1].mobility.initialX = 360m
+*.ueD2DRx[1].mobility.initialY = 310m
+
+*.ueD2DTx[2].mobility.initialX = 350m
+*.ueD2DTx[2].mobility.initialY = 320m
+*.ueD2DRx[2].mobility.initialX = 360m
+*.ueD2DRx[2].mobility.initialY = 320m
+
+*.ueD2DTx[3].mobility.initialX = 350m
+*.ueD2DTx[3].mobility.initialY = 330m
+*.ueD2DRx[3].mobility.initialX = 360m
+*.ueD2DRx[3].mobility.initialY = 330m
+
+*.ueD2DTx[4].mobility.initialX = 350m
+*.ueD2DTx[4].mobility.initialY = 340m
+*.ueD2DRx[4].mobility.initialX = 360m
+*.ueD2DRx[4].mobility.initialY = 340m
+
+*.ueD2DTx[5].mobility.initialX = 350m
+*.ueD2DTx[5].mobility.initialY = 350m
+*.ueD2DRx[5].mobility.initialX = 360m
+*.ueD2DRx[5].mobility.initialY = 350m
+
+*.ueD2DTx[6].mobility.initialX = 350m
+*.ueD2DTx[6].mobility.initialY = 360m
+*.ueD2DRx[6].mobility.initialX = 360m
+*.ueD2DRx[6].mobility.initialY = 360m
+
+*.ueD2DTx[7].mobility.initialX = 350m
+*.ueD2DTx[7].mobility.initialY = 370m
+*.ueD2DRx[7].mobility.initialX = 360m
+*.ueD2DRx[7].mobility.initialY = 370m
+
+*.ueD2DTx[8].mobility.initialX = 350m
+*.ueD2DTx[8].mobility.initialY = 380m
+*.ueD2DRx[8].mobility.initialX = 360m
+*.ueD2DRx[8].mobility.initialY = 380m
+
+*.ueD2DTx[9].mobility.initialX = 350m
+*.ueD2DTx[9].mobility.initialY = 390m
+*.ueD2DRx[9].mobility.initialX = 360m
+*.ueD2DRx[9].mobility.initialY = 390m
 
 
 [Config UDPTraffic]
 extends=Base
 
-### Traffic configuration ###
+### Traffic configuration.
 *.ue*[*].numUdpApps = 1
 
 **.ueCell[*].udpApp[0].typename = "UDPBasicApp"
@@ -80,7 +137,7 @@ extends=Base
 **.ueD2DRx[*].udpApp[0].typename = "UDPSink"
 **.ueD2DRx[*].udpApp[0].localPort = 1000
 
-# Enable D2D for the eNodeB and the UEs involved in direct communications.
+### Enable D2D for the eNodeB and the UEs involved in direct communications.
 *.eNodeB.d2dCapable = true
 *.ueD2D*[*].d2dCapable = true
 *.ueCell*[*].d2dCapable = false
@@ -91,64 +148,68 @@ extends=Base
 **.d2dCqi = 7
 
 
-[Config NoReusePF]
-extends=UDPTraffic
-*.numUeCell = 0
-*.numUeD2DTx = 2
-*.numUeD2DRx = 2
-
-**.deployer.numRbDl = 1
-**.deployer.numRbUl = 1
-**.numBands = 1
-**.schedulingDisciplineUl = "PF"
-**.schedulingDisciplineDl = "PF"
-
-
-*.ueD2DTx[0].mobility.initialX = 400m
-*.ueD2DTx[0].mobility.initialY = 250m
-*.ueD2DRx[0].mobility.initialX = 410m
-*.ueD2DRx[0].mobility.initialY = 250m
-
-*.ueD2DTx[1].mobility.initialX = 200m
-*.ueD2DTx[1].mobility.initialY = 350m
-*.ueD2DRx[1].mobility.initialX = 190m
-*.ueD2DRx[1].mobility.initialY = 350m
-
-
 [Config NoReuseDRR]
-extends=NoReusePF
+extends=UDPTraffic
 
 **.schedulingDisciplineUl = "DRR"
 **.schedulingDisciplineDl = "DRR"
 
+*.numPairs = ${N=2..10 step 1}
+*.numUeD2DTx = ${N}
+*.numUeD2DRx = ${N}
+output-scalar-file = ${resultdir}/${configname}/N${N}.sca
+
+
+[Config NoReusePF]
+extends=UDPTraffic
+
+**.schedulingDisciplineUl = "PF"
+**.schedulingDisciplineDl = "PF"
+
+*.numPairs = ${N=2..10 step 1}
+*.numUeD2DTx = ${N}
+*.numUeD2DRx = ${N}
+output-scalar-file = ${resultdir}/${configname}/N${N}.sca
+
 
 [Config NoReuseMaxCI]
-extends=NoReusePF
+extends=UDPTraffic
 
 **.schedulingDisciplineUl = "MAXCI"
 **.schedulingDisciplineDl = "MAXCI"
 
+*.numPairs = ${N=2..10 step 1}
+*.numUeD2DTx = ${N}
+*.numUeD2DRx = ${N}
+output-scalar-file = ${resultdir}/${configname}/N${N}.sca
+#*.ueD2D*[0..${($N)/2}].mobility.initialX = 300m
+#*.ueD2D*[0..${($N)/2}].mobility.initialY = 300m
+#*.ueD2D*[${($N)/2 + 1}..${N}].mobility.initialX = 300m
+#*.ueD2D*[${($N)/2 + 1}..${N}].mobility.initialY = 300m
+
+#*.ueD2D*[*].mobility.initialX = 300m
+#*.ueD2D*[*].mobility.initialY = 300m
+
 
 [Config YesReuse]
-extends=NoReuseDRR
+extends=UDPTraffic
 
 **.schedulingDisciplineUl = "ALLOCATOR_BESTFIT"
 **.schedulingDisciplineDl = "ALLOCATOR_BESTFIT"
 **.buildConflictGraph = true # Edges between UE Vertices if received power > threshold. If edge exists,
 							 # the nodes are conflicting and won't share a resource block.
 **.conflictGraphUpdatePeriod = 1s
-**.conflictGraphThreshold = -20   # dB threshold to create edge between vertices.
+**.conflictGraphThreshold = 0   # dB threshold when received power between two UEs is large enough 
+								  # that a conflict exists. -20dB is a large threshold and conflicts are very unlikely.
+								  # -90dB is the default, and -150dB would be a very low threshold.
 
+*.numPairs = ${N=2..10 step 1}
+*.numUeD2DTx = ${N}
+*.numUeD2DRx = ${N}
+output-scalar-file = ${resultdir}/${configname}/N${N}.sca
 
 [Config YesReuseClose]
 extends=YesReuse
 
-*.ueD2DTx[0].mobility.initialX = 400m
-*.ueD2DTx[0].mobility.initialY = 250m
-*.ueD2DRx[0].mobility.initialX = 410m
-*.ueD2DRx[0].mobility.initialY = 250m
-
-*.ueD2DTx[1].mobility.initialX = 400m
-*.ueD2DTx[1].mobility.initialY = 240m
-*.ueD2DRx[1].mobility.initialX = 410m
-*.ueD2DRx[1].mobility.initialY = 240m
+*.ueD2D*[0..11].mobility.initialX = uniform(345m,355m)
+*.ueD2D*[0..11].mobility.initialY = uniform(295m,305m)
