--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -11,10 +11,10 @@ repeat = 1
 
 
 ############### Statistics ##################
-output-scalar-file = ${resultdir}/${configname}/${repetition}.sca
-output-vector-file = ${resultdir}/${configname}/${repetition}.vec
+output-scalar-file = ${resultdir}/${configname}/run${runnumber}-rep${repetition}.sca
+output-vector-file = ${resultdir}/${configname}/run${runnumber}-rep${repetition}.vec
 seed-set = ${repetition}
-**.vector-recording = false
+**.vector-recording = true
 
 ################ Channel parameters #####################
 **.channelControl.pMax = 10W
@@ -63,56 +63,59 @@ network=FrequencyNetwork
 *.ueCell*[*].mobility.initialX = uniform(290m, 310m)
 *.ueCell*[*].mobility.initialY = uniform(290m, 310m)
 
+*.ueD2D*[*].mobility.initialX = uniform(490m, 510m)
+*.ueD2D*[*].mobility.initialY = uniform(290m, 310m)
+
 ## Place D2D UEs far from the eNodeB...
-*.ueD2DTx[0].mobility.initialX = 350m
-*.ueD2DTx[0].mobility.initialY = 300m
-*.ueD2DRx[0].mobility.initialX = 360m
-*.ueD2DRx[0].mobility.initialY = 300m
-
-*.ueD2DTx[1].mobility.initialX = 350m
-*.ueD2DTx[1].mobility.initialY = 310m
-*.ueD2DRx[1].mobility.initialX = 360m
-*.ueD2DRx[1].mobility.initialY = 310m
-
-*.ueD2DTx[2].mobility.initialX = 350m
-*.ueD2DTx[2].mobility.initialY = 320m
-*.ueD2DRx[2].mobility.initialX = 360m
-*.ueD2DRx[2].mobility.initialY = 320m
-
-*.ueD2DTx[3].mobility.initialX = 350m
-*.ueD2DTx[3].mobility.initialY = 330m
-*.ueD2DRx[3].mobility.initialX = 360m
-*.ueD2DRx[3].mobility.initialY = 330m
-
-*.ueD2DTx[4].mobility.initialX = 350m
-*.ueD2DTx[4].mobility.initialY = 340m
-*.ueD2DRx[4].mobility.initialX = 360m
-*.ueD2DRx[4].mobility.initialY = 340m
-
-*.ueD2DTx[5].mobility.initialX = 350m
-*.ueD2DTx[5].mobility.initialY = 350m
-*.ueD2DRx[5].mobility.initialX = 360m
-*.ueD2DRx[5].mobility.initialY = 350m
-
-*.ueD2DTx[6].mobility.initialX = 350m
-*.ueD2DTx[6].mobility.initialY = 360m
-*.ueD2DRx[6].mobility.initialX = 360m
-*.ueD2DRx[6].mobility.initialY = 360m
-
-*.ueD2DTx[7].mobility.initialX = 350m
-*.ueD2DTx[7].mobility.initialY = 370m
-*.ueD2DRx[7].mobility.initialX = 360m
-*.ueD2DRx[7].mobility.initialY = 370m
-
-*.ueD2DTx[8].mobility.initialX = 350m
-*.ueD2DTx[8].mobility.initialY = 380m
-*.ueD2DRx[8].mobility.initialX = 360m
-*.ueD2DRx[8].mobility.initialY = 380m
-
-*.ueD2DTx[9].mobility.initialX = 350m
-*.ueD2DTx[9].mobility.initialY = 390m
-*.ueD2DRx[9].mobility.initialX = 360m
-*.ueD2DRx[9].mobility.initialY = 390m
+#*.ueD2DTx[0].mobility.initialX = 350m
+#*.ueD2DTx[0].mobility.initialY = 300m
+#*.ueD2DRx[0].mobility.initialX = 360m
+#*.ueD2DRx[0].mobility.initialY = 300m
+#
+#*.ueD2DTx[1].mobility.initialX = 350m
+#*.ueD2DTx[1].mobility.initialY = 310m
+#*.ueD2DRx[1].mobility.initialX = 360m
+#*.ueD2DRx[1].mobility.initialY = 310m
+#
+#*.ueD2DTx[2].mobility.initialX = 350m
+#*.ueD2DTx[2].mobility.initialY = 320m
+#*.ueD2DRx[2].mobility.initialX = 360m
+#*.ueD2DRx[2].mobility.initialY = 320m
+#
+#*.ueD2DTx[3].mobility.initialX = 350m
+#*.ueD2DTx[3].mobility.initialY = 330m
+#*.ueD2DRx[3].mobility.initialX = 360m
+#*.ueD2DRx[3].mobility.initialY = 330m
+#
+#*.ueD2DTx[4].mobility.initialX = 350m
+#*.ueD2DTx[4].mobility.initialY = 340m
+#*.ueD2DRx[4].mobility.initialX = 360m
+#*.ueD2DRx[4].mobility.initialY = 340m
+#
+#*.ueD2DTx[5].mobility.initialX = 350m
+#*.ueD2DTx[5].mobility.initialY = 350m
+#*.ueD2DRx[5].mobility.initialX = 360m
+#*.ueD2DRx[5].mobility.initialY = 350m
+#
+#*.ueD2DTx[6].mobility.initialX = 350m
+#*.ueD2DTx[6].mobility.initialY = 360m
+#*.ueD2DRx[6].mobility.initialX = 360m
+#*.ueD2DRx[6].mobility.initialY = 360m
+#
+#*.ueD2DTx[7].mobility.initialX = 350m
+#*.ueD2DTx[7].mobility.initialY = 370m
+#*.ueD2DRx[7].mobility.initialX = 360m
+#*.ueD2DRx[7].mobility.initialY = 370m
+#
+#*.ueD2DTx[8].mobility.initialX = 350m
+#*.ueD2DTx[8].mobility.initialY = 380m
+#*.ueD2DRx[8].mobility.initialX = 360m
+#*.ueD2DRx[8].mobility.initialY = 380m
+#
+#*.ueD2DTx[9].mobility.initialX = 350m
+#*.ueD2DTx[9].mobility.initialY = 390m
+#*.ueD2DRx[9].mobility.initialX = 360m
+#*.ueD2DRx[9].mobility.initialY = 390m
 
 
 [Config UDPTraffic]
@@ -124,15 +127,15 @@ extends=Base
 **.ueCell[*].udpApp[0].typename = "UDPBasicApp"
 **.ueCell[*].udpApp[0].destAddresses = "server"
 **.ueCell[*].udpApp[0].destPort = 1000
-**.ueCell[*].udpApp[0].sendInterval = 0.00025s # 0.25ms
-**.ueCell[*].udpApp[0].messageLength = 65.507B
+**.ueCell[*].udpApp[0].sendInterval = 0.0005s # 2 packets per TTI = full buffer
+**.ueCell[*].udpApp[0].messageLength = 10B  # <576B from RFC1122 
 
 **.ueD2DTx[*].udpApp[0].typename = "UDPBasicApp"
 **.ueD2DTx[*].udpApp[*].destAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
 **.ueD2DTx[*].lteNic.d2dPeerAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
 **.ueD2DTx[*].udpApp[0].destPort = 1000
-**.ueD2DTx[*].udpApp[0].sendInterval = 0.00025s # 0.25ms
-**.ueD2DTx[*].udpApp[0].messageLength = 65.507B
+**.ueD2DTx[*].udpApp[0].sendInterval = 0.0005s # 2 packets per TTI = full buffer
+**.ueD2DTx[*].udpApp[0].messageLength = 10B  # <576B from RFC1122
 
 **.ueD2DRx[*].udpApp[0].typename = "UDPSink"
 **.ueD2DRx[*].udpApp[0].localPort = 1000
@@ -157,7 +160,6 @@ extends=UDPTraffic
 *.numPairs = ${N=2..10 step 1}
 *.numUeD2DTx = ${N}
 *.numUeD2DRx = ${N}
-output-scalar-file = ${resultdir}/${configname}/N${N}.sca
 
 
 [Config NoReusePF]
@@ -166,10 +168,9 @@ extends=UDPTraffic
 **.schedulingDisciplineUl = "PF"
 **.schedulingDisciplineDl = "PF"
 
-*.numPairs = ${N=2..10 step 1}
+*.numPairs = ${N=1..10 step 1}
 *.numUeD2DTx = ${N}
 *.numUeD2DRx = ${N}
-output-scalar-file = ${resultdir}/${configname}/N${N}.sca
 
 
 [Config NoReuseMaxCI]
@@ -178,10 +179,10 @@ extends=UDPTraffic
 **.schedulingDisciplineUl = "MAXCI"
 **.schedulingDisciplineDl = "MAXCI"
 
-*.numPairs = ${N=2..10 step 1}
+*.numPairs = ${N=1..10 step 1}
 *.numUeD2DTx = ${N}
 *.numUeD2DRx = ${N}
-output-scalar-file = ${resultdir}/${configname}/N${N}.sca
+
 #*.ueD2D*[0..${($N)/2}].mobility.initialX = 300m
 #*.ueD2D*[0..${($N)/2}].mobility.initialY = 300m
 #*.ueD2D*[${($N)/2 + 1}..${N}].mobility.initialX = 300m
@@ -203,10 +204,9 @@ extends=UDPTraffic
 								  # that a conflict exists. -20dB is a large threshold and conflicts are very unlikely.
 								  # -90dB is the default, and -150dB would be a very low threshold.
 
-*.numPairs = ${N=2..10 step 1}
+*.numPairs = ${N=1..10 step 1}
 *.numUeD2DTx = ${N}
 *.numUeD2DRx = ${N}
-output-scalar-file = ${resultdir}/${configname}/N${N}.sca
 
 [Config YesReuseClose]
 extends=YesReuse
