--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -42,8 +42,9 @@ network=FrequencyNetwork
 
 ### Number of UEs.
 *.numUeCell = 0
-*.numUeD2DTx = 2
-*.numUeD2DRx = 2
+*.numPairs = ${N=2..10 step 1}
+*.numUeD2DTx = ${N}
+*.numUeD2DRx = ${N}
 
 ### One resource. 
 **.deployer.numRbDl = 1
@@ -151,15 +152,14 @@ extends=Base
 **.d2dCqi = 7
 
 
+[Config NoReusePlentyResources]
+
+
 [Config NoReuseDRR]
 extends=UDPTraffic
 
 **.schedulingDisciplineUl = "DRR"
 **.schedulingDisciplineDl = "DRR"
-
-*.numPairs = ${N=2..10 step 1}
-*.numUeD2DTx = ${N}
-*.numUeD2DRx = ${N}
 
 
 [Config NoReusePF]
@@ -168,28 +168,12 @@ extends=UDPTraffic
 **.schedulingDisciplineUl = "PF"
 **.schedulingDisciplineDl = "PF"
 
-*.numPairs = ${N=1..10 step 1}
-*.numUeD2DTx = ${N}
-*.numUeD2DRx = ${N}
-
 
 [Config NoReuseMaxCI]
 extends=UDPTraffic
 
 **.schedulingDisciplineUl = "MAXCI"
 **.schedulingDisciplineDl = "MAXCI"
-
-*.numPairs = ${N=1..10 step 1}
-*.numUeD2DTx = ${N}
-*.numUeD2DRx = ${N}
-
-#*.ueD2D*[0..${($N)/2}].mobility.initialX = 300m
-#*.ueD2D*[0..${($N)/2}].mobility.initialY = 300m
-#*.ueD2D*[${($N)/2 + 1}..${N}].mobility.initialX = 300m
-#*.ueD2D*[${($N)/2 + 1}..${N}].mobility.initialY = 300m
-
-#*.ueD2D*[*].mobility.initialX = 300m
-#*.ueD2D*[*].mobility.initialY = 300m
 
 
 [Config YesReuse]
@@ -204,12 +188,56 @@ extends=UDPTraffic
 								  # that a conflict exists. -20dB is a large threshold and conflicts are very unlikely.
 								  # -90dB is the default, and -150dB would be a very low threshold.
 
-*.numPairs = ${N=1..10 step 1}
-*.numUeD2DTx = ${N}
-*.numUeD2DRx = ${N}
 
-[Config YesReuseClose]
+[Config YesReuseFar]
 extends=YesReuse
 
-*.ueD2D*[0..11].mobility.initialX = uniform(345m,355m)
-*.ueD2D*[0..11].mobility.initialY = uniform(295m,305m)
+*.ueD2DTx[0].mobility.initialX = 350m
+*.ueD2DTx[0].mobility.initialY = 300m
+*.ueD2DRx[0].mobility.initialX = 360m
+*.ueD2DRx[0].mobility.initialY = 300m
+
+*.ueD2DTx[1].mobility.initialX = 400m
+*.ueD2DTx[1].mobility.initialY = 300m
+*.ueD2DRx[1].mobility.initialX = 410m
+*.ueD2DRx[1].mobility.initialY = 300m
+
+*.ueD2DTx[2].mobility.initialX = 450m
+*.ueD2DTx[2].mobility.initialY = 300m
+*.ueD2DRx[2].mobility.initialX = 460m
+*.ueD2DRx[2].mobility.initialY = 300m
+
+*.ueD2DTx[3].mobility.initialX = 500m
+*.ueD2DTx[3].mobility.initialY = 300m
+*.ueD2DRx[3].mobility.initialX = 510m
+*.ueD2DRx[3].mobility.initialY = 300m
+
+*.ueD2DTx[4].mobility.initialX = 550m
+*.ueD2DTx[4].mobility.initialY = 300m
+*.ueD2DRx[4].mobility.initialX = 560m
+*.ueD2DRx[4].mobility.initialY = 300m
+
+*.ueD2DTx[5].mobility.initialX = 250m
+*.ueD2DTx[5].mobility.initialY = 300m
+*.ueD2DRx[5].mobility.initialX = 260m
+*.ueD2DRx[5].mobility.initialY = 300m
+
+*.ueD2DTx[6].mobility.initialX = 200m
+*.ueD2DTx[6].mobility.initialY = 300m
+*.ueD2DRx[6].mobility.initialX = 210m
+*.ueD2DRx[6].mobility.initialY = 300m
+
+*.ueD2DTx[7].mobility.initialX = 150m
+*.ueD2DTx[7].mobility.initialY = 300m
+*.ueD2DRx[7].mobility.initialX = 160m
+*.ueD2DRx[7].mobility.initialY = 300m
+
+*.ueD2DTx[8].mobility.initialX = 100m
+*.ueD2DTx[8].mobility.initialY = 300m
+*.ueD2DRx[8].mobility.initialX = 110m
+*.ueD2DRx[8].mobility.initialY = 300m
+
+*.ueD2DTx[9].mobility.initialX = 50m
+*.ueD2DTx[9].mobility.initialY = 300m
+*.ueD2DRx[9].mobility.initialX = 60m
+*.ueD2DRx[9].mobility.initialY = 300m
