--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -162,6 +162,13 @@ extends=UDPTraffic
 **.schedulingDisciplineDl = "DRR"
 
 
+[Config NoReuseDRR5RBs]
+extends=NoReuseDRR
+**.deployer.numRbDl = 5
+**.deployer.numRbUl = 5
+**.numBands = 5
+
+
 [Config NoReusePF]
 extends=UDPTraffic
 
@@ -241,3 +248,32 @@ extends=YesReuse
 *.ueD2DTx[9].mobility.initialY = 300m
 *.ueD2DRx[9].mobility.initialX = 60m
 *.ueD2DRx[9].mobility.initialY = 300m
+
+
+[Config testPhysicalProximity]
+extends=UDPTraffic
+*.numUeD2DTx = 3
+*.numUeD2DRx = 3
+
+*.ueD2DTx[0].mobility.initialX = 0m
+*.ueD2DTx[0].mobility.initialY = 0m
+*.ueD2DTx[1].mobility.initialX = 10m
+*.ueD2DTx[1].mobility.initialY = 0m
+*.ueD2DTx[2].mobility.initialX = 35m
+*.ueD2DTx[2].mobility.initialY = 0m
+
+*.ueD2DRx[0].mobility.initialX = 85m
+*.ueD2DRx[0].mobility.initialY = 0m
+*.ueD2DRx[1].mobility.initialX = 185m
+*.ueD2DRx[1].mobility.initialY = 0m
+*.ueD2DRx[2].mobility.initialX = 335m
+*.ueD2DRx[2].mobility.initialY = 0m
+
+
+[Config NaiveRR]
+extends=UDPTraffic
+**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
+**.deployer.numRbDl = 5
+**.deployer.numRbUl = 5
+**.numBands = 5
