cqi, sinr, attenuation test over distance

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -4,17 +4,18 @@ tkenv-plugin-path = ../../../inet/etc/plugins
 output-scalar-file-append = false
 debug-on-errors = false
 tkenv-default-config = 
-sim-time-limit=5s
+sim-time-limit=1s
 warmup-period=0s
-repeat = 1
+repeat = 5
 **.routingRecorder.enabled = false
 
 
 ############### Statistics ##################
-output-scalar-file = ${resultdir}/${configname}/run${runnumber}-rep${repetition}.sca
-output-vector-file = ${resultdir}/${configname}/run${runnumber}-rep${repetition}.vec
+*.numPairs = ${N=1..1 step 1}
+output-scalar-file = ${resultdir}/${configname}/N${N}-rep${repetition}.sca
+output-vector-file = ${resultdir}/${configname}/N${N}-rep${repetition}.vec
 seed-set = ${repetition}
-**.vector-recording = true
+**.vector-recording = false
 
 ################ Channel parameters #####################
 **.channelControl.pMax = 10W
@@ -42,84 +43,24 @@ network=FrequencyNetwork
 
 ### Number of UEs.
 *.numUeCell = 0
-*.numPairs = ${N=2..10 step 1}
 *.numUeD2DTx = ${N}
 *.numUeD2DRx = ${N}
 
 ### One resource. 
-**.deployer.numRbDl = 1
-**.deployer.numRbUl = 1
-**.numBands = 1
+**.deployer.numRbDl = 5
+**.deployer.numRbUl = 5
+**.numBands = 5
 
 ### eNodeB configuration.
 *.eNodeB.mobility.initFromDisplayString = false
-*.eNodeB.mobility.initialX = 300m
-*.eNodeB.mobility.initialY = 300m
 
 ### UE configuration.
 *.ue*[*].macCellId = 1
 *.ue*[*].masterId = 1
 *.ue*[*].mobility.initFromDisplayString = false
 
-*.ueCell*[*].mobility.initialX = uniform(290m, 310m)
-*.ueCell*[*].mobility.initialY = uniform(290m, 310m)
 
-*.ueD2D*[*].mobility.initialX = uniform(490m, 510m)
-*.ueD2D*[*].mobility.initialY = uniform(290m, 310m)
-
-## Place D2D UEs far from the eNodeB...
-#*.ueD2DTx[0].mobility.initialX = 350m
-#*.ueD2DTx[0].mobility.initialY = 300m
-#*.ueD2DRx[0].mobility.initialX = 360m
-#*.ueD2DRx[0].mobility.initialY = 300m
-#
-#*.ueD2DTx[1].mobility.initialX = 350m
-#*.ueD2DTx[1].mobility.initialY = 310m
-#*.ueD2DRx[1].mobility.initialX = 360m
-#*.ueD2DRx[1].mobility.initialY = 310m
-#
-#*.ueD2DTx[2].mobility.initialX = 350m
-#*.ueD2DTx[2].mobility.initialY = 320m
-#*.ueD2DRx[2].mobility.initialX = 360m
-#*.ueD2DRx[2].mobility.initialY = 320m
-#
-#*.ueD2DTx[3].mobility.initialX = 350m
-#*.ueD2DTx[3].mobility.initialY = 330m
-#*.ueD2DRx[3].mobility.initialX = 360m
-#*.ueD2DRx[3].mobility.initialY = 330m
-#
-#*.ueD2DTx[4].mobility.initialX = 350m
-#*.ueD2DTx[4].mobility.initialY = 340m
-#*.ueD2DRx[4].mobility.initialX = 360m
-#*.ueD2DRx[4].mobility.initialY = 340m
-#
-#*.ueD2DTx[5].mobility.initialX = 350m
-#*.ueD2DTx[5].mobility.initialY = 350m
-#*.ueD2DRx[5].mobility.initialX = 360m
-#*.ueD2DRx[5].mobility.initialY = 350m
-#
-#*.ueD2DTx[6].mobility.initialX = 350m
-#*.ueD2DTx[6].mobility.initialY = 360m
-#*.ueD2DRx[6].mobility.initialX = 360m
-#*.ueD2DRx[6].mobility.initialY = 360m
-#
-#*.ueD2DTx[7].mobility.initialX = 350m
-#*.ueD2DTx[7].mobility.initialY = 370m
-#*.ueD2DRx[7].mobility.initialX = 360m
-#*.ueD2DRx[7].mobility.initialY = 370m
-#
-#*.ueD2DTx[8].mobility.initialX = 350m
-#*.ueD2DTx[8].mobility.initialY = 380m
-#*.ueD2DRx[8].mobility.initialX = 360m
-#*.ueD2DRx[8].mobility.initialY = 380m
-#
-#*.ueD2DTx[9].mobility.initialX = 350m
-#*.ueD2DTx[9].mobility.initialY = 390m
-#*.ueD2DRx[9].mobility.initialX = 360m
-#*.ueD2DRx[9].mobility.initialY = 390m
-
-
-[Config UDPTraffic]
+[Config TrafficFullBuffer]
 extends=Base
 
 ### Traffic configuration.
@@ -141,6 +82,9 @@ extends=Base
 **.ueD2DRx[*].udpApp[0].typename = "UDPSink"
 **.ueD2DRx[*].udpApp[0].localPort = 1000
 
+**.server.udpApp[0].typename = "UDPSink"
+**.server.udpApp[0].localPort = 1000
+
 ### Enable D2D for the eNodeB and the UEs involved in direct communications.
 *.eNodeB.d2dCapable = true
 *.ueD2D*[*].d2dCapable = true
@@ -152,128 +96,93 @@ extends=Base
 **.d2dCqi = 7
 
 
-[Config NoReusePlentyResources]
+[Config PositionRandomClose]
+extends=TrafficFullBuffer
+*.eNodeB.mobility.initialX = 300m
+*.eNodeB.mobility.initialY = 300m
+
+*.ueD2D*[*].mobility.initialX = uniform(450m, 550m)
+*.ueD2D*[*].mobility.initialY = uniform(250m, 350m)
 
 
-[Config NoReuseDRR]
-extends=UDPTraffic
-
-**.schedulingDisciplineUl = "DRR"
-**.schedulingDisciplineDl = "DRR"
-
-
-[Config NoReuseDRR5RBs]
-extends=NoReuseDRR
-**.deployer.numRbDl = 5
-**.deployer.numRbUl = 5
-**.numBands = 5
-
-
-[Config NoReusePF]
-extends=UDPTraffic
-
-**.schedulingDisciplineUl = "PF"
-**.schedulingDisciplineDl = "PF"
-
-
-[Config NoReuseMaxCI]
-extends=UDPTraffic
-
-**.schedulingDisciplineUl = "MAXCI"
-**.schedulingDisciplineDl = "MAXCI"
-
-
-[Config YesReuse]
-extends=UDPTraffic
-
-**.schedulingDisciplineUl = "ALLOCATOR_BESTFIT"
-**.schedulingDisciplineDl = "ALLOCATOR_BESTFIT"
-**.buildConflictGraph = true # Edges between UE Vertices if received power > threshold. If edge exists,
-							 # the nodes are conflicting and won't share a resource block.
-**.conflictGraphUpdatePeriod = 1s
-**.conflictGraphThreshold = 0   # dB threshold when received power between two UEs is large enough 
-								  # that a conflict exists. -20dB is a large threshold and conflicts are very unlikely.
-								  # -90dB is the default, and -150dB would be a very low threshold.
-
-
-[Config YesReuseFar]
-extends=YesReuse
+[Config PositionFixedClose]
+extends=TrafficFullBuffer
+*.eNodeB.mobility.initialX = 300m
+*.eNodeB.mobility.initialY = 300m
 
 *.ueD2DTx[0].mobility.initialX = 350m
 *.ueD2DTx[0].mobility.initialY = 300m
 *.ueD2DRx[0].mobility.initialX = 360m
 *.ueD2DRx[0].mobility.initialY = 300m
 
-*.ueD2DTx[1].mobility.initialX = 400m
-*.ueD2DTx[1].mobility.initialY = 300m
-*.ueD2DRx[1].mobility.initialX = 410m
-*.ueD2DRx[1].mobility.initialY = 300m
+*.ueD2DTx[1].mobility.initialX = 350m
+*.ueD2DTx[1].mobility.initialY = 310m
+*.ueD2DRx[1].mobility.initialX = 360m
+*.ueD2DRx[1].mobility.initialY = 310m
 
-*.ueD2DTx[2].mobility.initialX = 450m
-*.ueD2DTx[2].mobility.initialY = 300m
-*.ueD2DRx[2].mobility.initialX = 460m
-*.ueD2DRx[2].mobility.initialY = 300m
+*.ueD2DTx[2].mobility.initialX = 350m
+*.ueD2DTx[2].mobility.initialY = 320m
+*.ueD2DRx[2].mobility.initialX = 360m
+*.ueD2DRx[2].mobility.initialY = 320m
 
-*.ueD2DTx[3].mobility.initialX = 500m
-*.ueD2DTx[3].mobility.initialY = 300m
-*.ueD2DRx[3].mobility.initialX = 510m
-*.ueD2DRx[3].mobility.initialY = 300m
+*.ueD2DTx[3].mobility.initialX = 350m
+*.ueD2DTx[3].mobility.initialY = 330m
+*.ueD2DRx[3].mobility.initialX = 360m
+*.ueD2DRx[3].mobility.initialY = 330m
 
-*.ueD2DTx[4].mobility.initialX = 550m
-*.ueD2DTx[4].mobility.initialY = 300m
-*.ueD2DRx[4].mobility.initialX = 560m
-*.ueD2DRx[4].mobility.initialY = 300m
+*.ueD2DTx[4].mobility.initialX = 350m
+*.ueD2DTx[4].mobility.initialY = 340m
+*.ueD2DRx[4].mobility.initialX = 360m
+*.ueD2DRx[4].mobility.initialY = 340m
 
-*.ueD2DTx[5].mobility.initialX = 250m
-*.ueD2DTx[5].mobility.initialY = 300m
-*.ueD2DRx[5].mobility.initialX = 260m
-*.ueD2DRx[5].mobility.initialY = 300m
+*.ueD2DTx[5].mobility.initialX = 350m
+*.ueD2DTx[5].mobility.initialY = 350m
+*.ueD2DRx[5].mobility.initialX = 360m
+*.ueD2DRx[5].mobility.initialY = 350m
 
-*.ueD2DTx[6].mobility.initialX = 200m
-*.ueD2DTx[6].mobility.initialY = 300m
-*.ueD2DRx[6].mobility.initialX = 210m
-*.ueD2DRx[6].mobility.initialY = 300m
+*.ueD2DTx[6].mobility.initialX = 350m
+*.ueD2DTx[6].mobility.initialY = 360m
+*.ueD2DRx[6].mobility.initialX = 360m
+*.ueD2DRx[6].mobility.initialY = 360m
 
-*.ueD2DTx[7].mobility.initialX = 150m
-*.ueD2DTx[7].mobility.initialY = 300m
-*.ueD2DRx[7].mobility.initialX = 160m
-*.ueD2DRx[7].mobility.initialY = 300m
+*.ueD2DTx[7].mobility.initialX = 350m
+*.ueD2DTx[7].mobility.initialY = 370m
+*.ueD2DRx[7].mobility.initialX = 360m
+*.ueD2DRx[7].mobility.initialY = 370m
 
-*.ueD2DTx[8].mobility.initialX = 100m
-*.ueD2DTx[8].mobility.initialY = 300m
-*.ueD2DRx[8].mobility.initialX = 110m
-*.ueD2DRx[8].mobility.initialY = 300m
+*.ueD2DTx[8].mobility.initialX = 350m
+*.ueD2DTx[8].mobility.initialY = 380m
+*.ueD2DRx[8].mobility.initialX = 360m
+*.ueD2DRx[8].mobility.initialY = 380m
 
-*.ueD2DTx[9].mobility.initialX = 50m
-*.ueD2DTx[9].mobility.initialY = 300m
-*.ueD2DRx[9].mobility.initialX = 60m
-*.ueD2DRx[9].mobility.initialY = 300m
+*.ueD2DTx[9].mobility.initialX = 350m
+*.ueD2DTx[9].mobility.initialY = 390m
+*.ueD2DRx[9].mobility.initialX = 360m
+*.ueD2DRx[9].mobility.initialY = 390m
 
 
-[Config testPhysicalProximity]
-extends=UDPTraffic
-*.numUeD2DTx = 3
-*.numUeD2DRx = 3
+[Config testIncreasingDistance]
+extends=TrafficFullBuffer
+*.eNodeB.mobility.initialX = 300m
+*.eNodeB.mobility.initialY = 300m
 
-*.ueD2DTx[0].mobility.initialX = 0m
-*.ueD2DTx[0].mobility.initialY = 0m
-*.ueD2DTx[1].mobility.initialX = 10m
-*.ueD2DTx[1].mobility.initialY = 0m
-*.ueD2DTx[2].mobility.initialX = 35m
-*.ueD2DTx[2].mobility.initialY = 0m
+*.numUeD2DTx = 1
+*.numUeD2DRx = 1
 
-*.ueD2DRx[0].mobility.initialX = 85m
-*.ueD2DRx[0].mobility.initialY = 0m
-*.ueD2DRx[1].mobility.initialX = 185m
-*.ueD2DRx[1].mobility.initialY = 0m
-*.ueD2DRx[2].mobility.initialX = 335m
-*.ueD2DRx[2].mobility.initialY = 0m
+# Receiver is at (400,300).
+*.ueD2DRx[0].mobility.initialX = 400m
+*.ueD2DRx[0].mobility.initialY = 300m
+# Transmitter moves from 100m away to 5000m away.
+*.ueD2DTx[0].mobility.initialX = ${410..550 step 10}m
+*.ueD2DTx[0].mobility.initialY = 300m
+
 
 
 [Config NaiveRR]
-extends=UDPTraffic
+extends=PositionRandomClose
 **.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 **.deployer.numRbDl = 5
 **.deployer.numRbUl = 5
 **.numBands = 5
+
