distance influence validated

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -4,7 +4,7 @@ tkenv-plugin-path = ../../../inet/etc/plugins
 output-scalar-file-append = false
 debug-on-errors = false
 tkenv-default-config = 
-sim-time-limit=1s
+sim-time-limit=10s
 warmup-period=0s
 repeat = 5
 **.routingRecorder.enabled = false
@@ -15,7 +15,7 @@ repeat = 5
 output-scalar-file = ${resultdir}/${configname}/N${N}-rep${repetition}.sca
 output-vector-file = ${resultdir}/${configname}/N${N}-rep${repetition}.vec
 seed-set = ${repetition}
-**.vector-recording = false
+**.vector-recording = true
 
 ################ Channel parameters #####################
 **.channelControl.pMax = 10W
@@ -46,10 +46,13 @@ network=FrequencyNetwork
 *.numUeD2DTx = ${N}
 *.numUeD2DRx = ${N}
 
-### One resource. 
+### Five resources appears to be the minimum number to have sufficiently many TTIs. 
 **.deployer.numRbDl = 5
 **.deployer.numRbUl = 5
 **.numBands = 5
+### Default scheduling discipline.
+**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
 ### eNodeB configuration.
 *.eNodeB.mobility.initFromDisplayString = false
@@ -77,7 +80,7 @@ extends=Base
 **.ueD2DTx[*].lteNic.d2dPeerAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
 **.ueD2DTx[*].udpApp[0].destPort = 1000
 **.ueD2DTx[*].udpApp[0].sendInterval = 0.0005s # 2 packets per TTI = full buffer
-**.ueD2DTx[*].udpApp[0].messageLength = 10B  # <576B from RFC1122
+**.ueD2DTx[*].udpApp[0].messageLength = 500B  # <576B from RFC1122
 
 **.ueD2DRx[*].udpApp[0].typename = "UDPSink"
 **.ueD2DRx[*].udpApp[0].localPort = 1000
@@ -162,20 +165,22 @@ extends=TrafficFullBuffer
 
 
 [Config testIncreasingDistance]
-extends=TrafficFullBuffer
+extends=PositionFixedClose
 *.eNodeB.mobility.initialX = 300m
 *.eNodeB.mobility.initialY = 300m
 
-*.numUeD2DTx = 1
-*.numUeD2DRx = 1
+**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
+*.numUeD2DTx = 10
+*.numUeD2DRx = 10
 
 # Receiver is at (400,300).
 *.ueD2DRx[0].mobility.initialX = 400m
 *.ueD2DRx[0].mobility.initialY = 300m
-# Transmitter moves from 100m away to 5000m away.
-*.ueD2DTx[0].mobility.initialX = ${410..550 step 10}m
+# Transmitter moves from 10m away to 100m away.
+*.ueD2DTx[0].mobility.initialX = ${d=410..500 step 10}m
 *.ueD2DTx[0].mobility.initialY = 300m
-
+output-scalar-file = ${resultdir}/${configname}/d${d}-rep${repetition}.sca
 
 
 [Config NaiveRR]
