implemented and tested LteReuseTester scheduling module

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -15,7 +15,7 @@ repeat = 5
 output-scalar-file = ${resultdir}/${configname}/N${N}-rep${repetition}.sca
 output-vector-file = ${resultdir}/${configname}/N${N}-rep${repetition}.vec
 seed-set = ${repetition}
-**.vector-recording = true
+**.vector-recording = false
 
 ################ Channel parameters #####################
 **.channelControl.pMax = 10W
@@ -73,7 +73,7 @@ extends=Base
 **.ueCell[*].udpApp[0].destAddresses = "server"
 **.ueCell[*].udpApp[0].destPort = 1000
 **.ueCell[*].udpApp[0].sendInterval = 0.0005s # 2 packets per TTI = full buffer
-**.ueCell[*].udpApp[0].messageLength = 10B  # <576B from RFC1122 
+**.ueCell[*].udpApp[0].messageLength = 500B  # <576B from RFC1122 
 
 **.ueD2DTx[*].udpApp[0].typename = "UDPBasicApp"
 **.ueD2DTx[*].udpApp[*].destAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
@@ -104,8 +104,8 @@ extends=TrafficFullBuffer
 *.eNodeB.mobility.initialX = 300m
 *.eNodeB.mobility.initialY = 300m
 
-*.ueD2D*[*].mobility.initialX = uniform(450m, 550m)
-*.ueD2D*[*].mobility.initialY = uniform(250m, 350m)
+*.ueD2D*[*].mobility.initialX = uniform(475m, 525m)
+*.ueD2D*[*].mobility.initialY = uniform(275m, 325m)
 
 
 [Config PositionFixedClose]
@@ -171,8 +171,8 @@ extends=PositionFixedClose
 
 **.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
-*.numUeD2DTx = 10
-*.numUeD2DRx = 10
+*.numUeD2DTx = 1
+*.numUeD2DRx = 1
 
 # Receiver is at (400,300).
 *.ueD2DRx[0].mobility.initialX = 400m
@@ -190,4 +190,22 @@ extends=PositionRandomClose
 **.deployer.numRbDl = 5
 **.deployer.numRbUl = 5
 **.numBands = 5
+
+[Config ReuseTester]
+extends=PositionRandomClose
+*.numUeD2DTx = 2
+*.numUeD2DRx = 2
+**.schedulingDisciplineUl = "REUSE_TESTER"
+**.schedulingDisciplineDl = "REUSE_TESTER"
+
+*.ueD2DTx[0].mobility.initialX = 450m
+*.ueD2DTx[0].mobility.initialY = 300m
+*.ueD2DRx[0].mobility.initialX = 525m
+*.ueD2DRx[0].mobility.initialY = 300m
+
+*.ueD2DTx[1].mobility.initialX = 450m
+*.ueD2DTx[1].mobility.initialY = ${d=310..400 step 10}m
+*.ueD2DRx[1].mobility.initialX = 525m
+*.ueD2DRx[1].mobility.initialY = ${d}m
+output-scalar-file = ${resultdir}/${configname}/noreuse-d${d}-rep${repetition}.sca
 
