making my way to a frequency reuse scheduler; data sometimes gets through, sometimes it doesn't

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -4,9 +4,9 @@ tkenv-plugin-path = ../../../inet/etc/plugins
 output-scalar-file-append = false
 debug-on-errors = false
 tkenv-default-config = 
-sim-time-limit=10s
+sim-time-limit=30s
 warmup-period=0s
-repeat = 5
+repeat = 20
 **.routingRecorder.enabled = false
 
 
@@ -96,7 +96,7 @@ extends=Base
 
 *.eNodeB.lteNic.phy.enableD2DCqiReporting = true
 **.usePreconfiguredTxParams = false
-**.d2dCqi = 7
+#**.d2dCqi = 7
 
 
 [Config PositionRandomClose]
@@ -180,7 +180,7 @@ extends=PositionFixedClose
 # Transmitter moves from 10m away to 100m away.
 *.ueD2DTx[0].mobility.initialX = ${d=410..500 step 10}m
 *.ueD2DTx[0].mobility.initialY = 300m
-output-scalar-file = ${resultdir}/${configname}/d${d}-rep${repetition}.sca
+output-scalar-file = ${resultdir}/${configname}/reused${d}-rep${repetition}.sca
 
 
 [Config NaiveRR]
@@ -192,20 +192,29 @@ extends=PositionRandomClose
 **.numBands = 5
 
 [Config ReuseTester]
-extends=PositionRandomClose
+extends=TrafficFullBuffer
 *.numUeD2DTx = 2
 *.numUeD2DRx = 2
+**.deployer.numRbDl = 5
+**.deployer.numRbUl = 5
+**.numBands = 5
+#**.buildConflictGraph = true
+#**.conflictGraphUpdatePeriod = 1s
+#**.conflictGraphThreshold = -20   #dB
 **.schedulingDisciplineUl = "REUSE_TESTER"
 **.schedulingDisciplineDl = "REUSE_TESTER"
 
-*.ueD2DTx[0].mobility.initialX = 450m
+*.eNodeB.mobility.initialX = 300m
+*.eNodeB.mobility.initialY = 300m
+
+*.ueD2DTx[0].mobility.initialX = 400m
 *.ueD2DTx[0].mobility.initialY = 300m
-*.ueD2DRx[0].mobility.initialX = 525m
+*.ueD2DRx[0].mobility.initialX = 475m # 75m apart
 *.ueD2DRx[0].mobility.initialY = 300m
 
-*.ueD2DTx[1].mobility.initialX = 450m
-*.ueD2DTx[1].mobility.initialY = ${d=310..400 step 10}m
-*.ueD2DRx[1].mobility.initialX = 525m
+*.ueD2DTx[1].mobility.initialX = 400m
+*.ueD2DTx[1].mobility.initialY = ${d=310..400 step 10}m # 10m -> 100m away from other pair
+*.ueD2DRx[1].mobility.initialX = 475m
 *.ueD2DRx[1].mobility.initialY = ${d}m
-output-scalar-file = ${resultdir}/${configname}/noreuse-d${d}-rep${repetition}.sca
+output-scalar-file = ${resultdir}/${configname}/d${d}-rep${repetition}.sca
 
