prepared physical distance test sim

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -4,7 +4,7 @@ tkenv-plugin-path = ../../../inet/etc/plugins
 output-scalar-file-append = false
 debug-on-errors = false
 tkenv-default-config =
-sim-time-limit=60s
+sim-time-limit=30s
 warmup-period=0s
 repeat = 20
 **.routingRecorder.enabled = false
@@ -53,11 +53,8 @@ network=FrequencyNetwork
 *.eNodeB.mobility.initialX = 300m
 *.eNodeB.mobility.initialY = 300m
 
-*.ueCell[*].mobility.initialX = uniform(275m, 325m)
-*.ueCell[*].mobility.initialY = uniform(275m, 325m)
-
-*.ueD2D*[*].mobility.initialX = uniform(500m, 510m)
-*.ueD2D*[*].mobility.initialY = uniform(300m, 310m)
+*.ue*[*].mobility.initialX = uniform(290m,310m)
+*.ue*[*].mobility.initialY = uniform(340m,350m)
 
 ### Default scheduling discipline.
 **.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
@@ -156,7 +153,7 @@ output-scalar-file = ${resultdir}/${configname}/reused${d}-rep${repetition}.sca
 
 
 [Config ReuseTester]
-extends=TrafficTCPFTP
+extends=TrafficUDPFullBuffer
 *.numUeD2DTx = 2
 *.numUeD2DRx = 2
 **.deployer.numRbDl = 5
@@ -168,18 +165,19 @@ extends=TrafficTCPFTP
 *.eNodeB.mobility.initialX = 300m
 *.eNodeB.mobility.initialY = 300m
 
-#*.ueD2DTx[0].mobility.initialX = 400m
-#*.ueD2DTx[0].mobility.initialY = 300m
-#*.ueD2DRx[0].mobility.initialX = 475m # 75m apart
-#*.ueD2DRx[0].mobility.initialY = 300m
-#
-#*.ueD2DTx[1].mobility.initialX = 400m
-#*.ueD2DTx[1].mobility.initialY = ${d=310..400 step 10}m # 10m -> 100m away from other pair
-#*.ueD2DRx[1].mobility.initialX = 475m
-#*.ueD2DRx[1].mobility.initialY = ${d}m
-#output-scalar-file = ${resultdir}/${configname}/d${d}-rep${repetition}.sca
-*.ueD2D*[*].mobility.initialX = uniform(290m,310m)
-*.ueD2D*[*].mobility.initialY = uniform(340m,350m)
+#*.ueD2D*[*].mobility.initialX = uniform(290m,310m)
+#*.ueD2D*[*].mobility.initialY = uniform(340m,350m)
+
+*.ueD2DTx[0].mobility.initialX = 300m
+*.ueD2DTx[0].mobility.initialY = 340m
+*.ueD2DRx[0].mobility.initialX = 300m 
+*.ueD2DRx[0].mobility.initialY = 390m # 50m from Tx
+
+*.ueD2DTx[1].mobility.initialX = 300m
+*.ueD2DTx[1].mobility.initialY = ${d=350..390 step 10}m # 10m -> 50m away from other pair
+*.ueD2DRx[1].mobility.initialX = 350m # 50m from Tx 
+*.ueD2DRx[1].mobility.initialY = ${d}m
+output-scalar-file = ${resultdir}/${configname}/d${d}-rep${repetition}.sca
 
 
 [Config AllocatorBestFitTester]
@@ -189,3 +187,24 @@ extends=ReuseTester
 **.conflictGraphThreshold = -20   #dB
 **.schedulingDisciplineUl = "ALLOCATOR_BESTFIT"
 **.schedulingDisciplineDl = "ALLOCATOR_BESTFIT"
+
+#output-scalar-file = ${resultdir}/${configname}/rep${repetition}.sca
+
+
+[Config interferenceTester]
+extends=TrafficUDPFullBuffer
+extends=TrafficUDPFullBuffer
+*.numUeD2DTx = 10
+*.numUeD2DRx = 10
+**.deployer.numRbDl = 5
+**.deployer.numRbUl = 5
+**.numBands = 5
+**.schedulingDisciplineUl = "REUSE_TESTER"
+**.schedulingDisciplineDl = "REUSE_TESTER"
+
+*.ue*[1..9].mobility.initialX = uniform(290m,310m)
+*.ue*[1..9].mobility.initialY = uniform(340m,350m)
+*.ueD2DTx[0].mobility.initialX = ${d=300..380 step 10}m # 0m -> 70m away from the cluster
+*.ueD2DTx[0].mobility.initialY = 345m
+*.ueD2DRx[0].mobility.initialX = ${d}m 
+*.ueD2DRx[0].mobility.initialY = 355m # 10m from Tx
