fixed output filenames for interferenceTester config

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -208,3 +208,4 @@ extends=TrafficUDPFullBuffer
 *.ueD2DTx[0].mobility.initialY = 345m
 *.ueD2DRx[0].mobility.initialX = ${d}m 
 *.ueD2DRx[0].mobility.initialY = 355m # 10m from Tx
+output-scalar-file = ${resultdir}/${configname}/d${d}-rep${repetition}.sca
