fixed positioning in interferenceTester; single pair moves in 20m increments

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -202,10 +202,53 @@ extends=TrafficUDPFullBuffer
 **.schedulingDisciplineUl = "REUSE_TESTER"
 **.schedulingDisciplineDl = "REUSE_TESTER"
 
-*.ue*[1..9].mobility.initialX = uniform(290m,310m)
-*.ue*[1..9].mobility.initialY = uniform(340m,350m)
-*.ueD2DTx[0].mobility.initialX = ${d=300..380 step 10}m # 0m -> 70m away from the cluster
-*.ueD2DTx[0].mobility.initialY = 345m
-*.ueD2DRx[0].mobility.initialX = ${d}m 
-*.ueD2DRx[0].mobility.initialY = 355m # 10m from Tx
+*.ueD2DTx[1].mobility.initialX = 310m
+*.ueD2DTx[1].mobility.initialY = 300m
+*.ueD2DRx[1].mobility.initialX = 310m
+*.ueD2DRx[1].mobility.initialY = 310m
+
+*.ueD2DTx[2].mobility.initialX = 320m
+*.ueD2DTx[2].mobility.initialY = 300m
+*.ueD2DRx[2].mobility.initialX = 320m
+*.ueD2DRx[2].mobility.initialY = 310m
+
+*.ueD2DTx[3].mobility.initialX = 330m
+*.ueD2DTx[3].mobility.initialY = 300m
+*.ueD2DRx[3].mobility.initialX = 330m
+*.ueD2DRx[3].mobility.initialY = 310m
+
+*.ueD2DTx[4].mobility.initialX = 340m
+*.ueD2DTx[4].mobility.initialY = 300m
+*.ueD2DRx[4].mobility.initialX = 340m
+*.ueD2DRx[4].mobility.initialY = 310m
+
+*.ueD2DTx[5].mobility.initialX = 310m
+*.ueD2DTx[5].mobility.initialY = 315m
+*.ueD2DRx[5].mobility.initialX = 310m
+*.ueD2DRx[5].mobility.initialY = 325m
+
+*.ueD2DTx[6].mobility.initialX = 320m
+*.ueD2DTx[6].mobility.initialY = 315m
+*.ueD2DRx[6].mobility.initialX = 320m
+*.ueD2DRx[6].mobility.initialY = 325m
+
+*.ueD2DTx[7].mobility.initialX = 330m
+*.ueD2DTx[7].mobility.initialY = 315m
+*.ueD2DRx[7].mobility.initialX = 330m
+*.ueD2DRx[7].mobility.initialY = 325m
+
+*.ueD2DTx[8].mobility.initialX = 340m
+*.ueD2DTx[8].mobility.initialY = 315m
+*.ueD2DRx[8].mobility.initialX = 340m
+*.ueD2DRx[8].mobility.initialY = 325m
+
+*.ueD2DTx[9].mobility.initialX = 350m
+*.ueD2DTx[9].mobility.initialY = 315m
+*.ueD2DRx[9].mobility.initialX = 350m
+*.ueD2DRx[9].mobility.initialY = 325m
+
+*.ueD2DTx[0].mobility.initialX = ${d=325..465 step 20}m 
+*.ueD2DTx[0].mobility.initialY = 305m # 0m -> 150m away from the cluster
+*.ueD2DRx[0].mobility.initialX = ${d}m # 12m from Tx
+*.ueD2DRx[0].mobility.initialY = 317m
 output-scalar-file = ${resultdir}/${configname}/d${d}-rep${repetition}.sca
