static RNG seed influence test with UDP full buffer

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -108,6 +108,8 @@ extends=Base
 ### UDP VOICE-OVER-IP TRAFFIC ###
 [Config TrafficUDPVoIP]
 extends = Base
+*.ue*[*].numUdpApps = 1
+
 *.ueCell[*].udpApp[*].typename = "VoIPSender"
 *.ueCell[*].udpApp[*].localPort = 3088+ancestorIndex(0) 
 *.ueCell[*].udpApp[*].startTime = uniform(0s,0.02s)
@@ -124,6 +126,9 @@ extends = Base
 *.ueD2DRx[*].udpApp[*].localPort = 1000
 **.server.udpApp[0].typename = "VoIPReceiver"
 **.server.udpApp[0].localPort = 1000
+
+*.ueD2DTx[*].lteNic.d2dPeerAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
+*.ueD2DRx[*].lteNic.d2dPeerAddresses = "ueD2DTx[" + string(ancestorIndex(1)) + "]"
 
 ### FTP VIA TCP TRAFFIC ###
 [Config TrafficTCPFTP]
@@ -275,7 +280,7 @@ output-scalar-file = ${resultdir}/${configname}/d${d}-rep${repetition}.sca
 
 
 [Config testRNGSeedInfluence]
-extends = TrafficUDPVoIP
+extends = TrafficUDPFullBuffer
 *.numUeD2DTx = 1
 *.numUeD2DRx = 1
 **.deployer.numRbDl = 6
