--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -281,11 +281,11 @@ output-scalar-file = ${resultdir}/${configname}/d${d}-rep${repetition}.sca
 
 [Config testRNGSeedInfluence]
 extends = TrafficUDPFullBuffer
-*.numUeD2DTx = 1
-*.numUeD2DRx = 1
-**.deployer.numRbDl = 6
-**.deployer.numRbUl = 6
-**.numBands = 6
+*.numUeD2DTx = 10
+*.numUeD2DRx = 10
+**.deployer.numRbDl = 50
+**.deployer.numRbUl = 50
+**.numBands = 50
 **.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
@@ -297,3 +297,9 @@ extends = TrafficUDPFullBuffer
 # Transmitter is 50m away.
 *.ueD2DTx[0].mobility.initialX = 450m
 *.ueD2DTx[0].mobility.initialY = 300m
+
+
+[Config testRNGSeedInfluencePF]
+extends = testRNGSeedInfluence
+**.schedulingDisciplineUl = "PF"
+**.schedulingDisciplineDl = "PF"
