--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -294,9 +294,53 @@ extends = TrafficUDPFullBuffer
 # Receiver is at (400,300).
 *.ueD2DRx[0].mobility.initialX = 400m
 *.ueD2DRx[0].mobility.initialY = 300m
-# Transmitter is 50m away.
-*.ueD2DTx[0].mobility.initialX = 450m
+*.ueD2DTx[0].mobility.initialX = 410m # 10m away
 *.ueD2DTx[0].mobility.initialY = 300m
+
+*.ueD2DRx[1].mobility.initialX = 400m
+*.ueD2DRx[1].mobility.initialY = 350m
+*.ueD2DTx[1].mobility.initialX = 420m # 20m away
+*.ueD2DTx[1].mobility.initialY = 350m
+
+*.ueD2DRx[2].mobility.initialX = 400m
+*.ueD2DRx[2].mobility.initialY = 400m
+*.ueD2DTx[2].mobility.initialX = 430m # 30m away
+*.ueD2DTx[2].mobility.initialY = 400m
+
+*.ueD2DRx[3].mobility.initialX = 400m
+*.ueD2DRx[3].mobility.initialY = 450m
+*.ueD2DTx[3].mobility.initialX = 440m # 40m away
+*.ueD2DTx[3].mobility.initialY = 450m
+
+*.ueD2DRx[4].mobility.initialX = 400m
+*.ueD2DRx[4].mobility.initialY = 500m
+*.ueD2DTx[4].mobility.initialX = 450m # 50m away
+*.ueD2DTx[4].mobility.initialY = 500m
+
+*.ueD2DRx[5].mobility.initialX = 400m
+*.ueD2DRx[5].mobility.initialY = 550m
+*.ueD2DTx[5].mobility.initialX = 460m # 60m away
+*.ueD2DTx[5].mobility.initialY = 550m
+
+*.ueD2DRx[6].mobility.initialX = 400m
+*.ueD2DRx[6].mobility.initialY = 600m
+*.ueD2DTx[6].mobility.initialX = 470m # 70m away
+*.ueD2DTx[6].mobility.initialY = 600m
+
+*.ueD2DRx[7].mobility.initialX = 400m
+*.ueD2DRx[7].mobility.initialY = 650m
+*.ueD2DTx[7].mobility.initialX = 480m # 80m away
+*.ueD2DTx[7].mobility.initialY = 650m
+
+*.ueD2DRx[8].mobility.initialX = 400m
+*.ueD2DRx[8].mobility.initialY = 700m
+*.ueD2DTx[8].mobility.initialX = 490m # 90m away
+*.ueD2DTx[8].mobility.initialY = 700m
+
+*.ueD2DRx[9].mobility.initialX = 400m
+*.ueD2DRx[9].mobility.initialY = 750m
+*.ueD2DTx[9].mobility.initialX = 500m # 100m away
+*.ueD2DTx[9].mobility.initialY = 750m
 
 
 [Config testRNGSeedInfluencePF]
