testRNGSeedInfluence plot with throughput

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -218,7 +218,6 @@ extends=ReuseTester
 
 [Config interferenceTester]
 extends=TrafficUDPFullBuffer
-extends=TrafficUDPFullBuffer
 *.numUeD2DTx = 10
 *.numUeD2DRx = 10
 **.deployer.numRbDl = 5
@@ -347,3 +346,9 @@ extends = TrafficUDPFullBuffer
 extends = testRNGSeedInfluence
 **.schedulingDisciplineUl = "PF"
 **.schedulingDisciplineDl = "PF"
+
+
+[Config tuGameTest]
+extends = testRNGSeedInfluence
+**.schedulingDisciplineUl = "STACKELBERG_GAME"
+**.schedulingDisciplineDl = "STACKELBERG_GAME"
