implemented TrafficMixed config

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -4,9 +4,9 @@ tkenv-plugin-path = ../../../inet/etc/plugins
 output-scalar-file-append = false
 debug-on-errors = false
 tkenv-default-config =
-sim-time-limit=60s
+sim-time-limit=3s
 warmup-period=0s
-repeat = 50
+repeat = 1
 **.routingRecorder.enabled = false
 
 ### Statistics.
@@ -129,6 +129,56 @@ extends = Base
 
 *.ueD2DTx[*].lteNic.d2dPeerAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
 *.ueD2DRx[*].lteNic.d2dPeerAddresses = "ueD2DTx[" + string(ancestorIndex(1)) + "]"
+
+[Config TrafficMixed]
+extends = Base
+*.numUeCell = 5
+*.numUeD2DTx = 5
+*.numUeD2DRx = 5
+
+# 3 VoIP senders.
+*.ueCell[*].numUdpApps = 1
+*.ueCell[0..2].udpApp[0].typename = "VoIPSender"
+*.ueCell[0..2].udpApp[0].localPort = 3088+ancestorIndex(0) 
+*.ueCell[0..2].udpApp[0].startTime = uniform(0s,0.02s)
+*.ueCell[0..2].udpApp[0].destAddress = "server"
+*.ueCell[0..2].udpApp[0].destPort = 1001
+
+# 2 CBR users.
+**.ueCell[3..4].udpApp[0].typename = "UDPBasicApp"
+**.ueCell[3..4].udpApp[0].destAddresses = "server"
+**.ueCell[3..4].udpApp[0].destPort = 1000
+**.ueCell[3..4].udpApp[0].sendInterval = 1s # 
+**.ueCell[3..4].udpApp[0].messageLength = 5000B # 5kB/s
+
+# Server as endpoint.
+**.server.numUdpApps = 2
+**.server.udpApp[0].typename = "UDPSink"
+**.server.udpApp[0].localPort = 1000
+**.server.udpApp[1].typename = "VoIPReceiver"
+**.server.udpApp[1].localPort = 1001
+
+# 3 D2D VoIP users.
+*.ueD2DTx[*].numUdpApps = 1
+*.ueD2DRx[*].numUdpApps = 1
+*.ueD2DTx[0..2].udpApp[*].typename = "VoIPSender"
+*.ueD2DTx[0..2].udpApp[*].localPort = 3088+ancestorIndex(0) 
+*.ueD2DTx[0..2].udpApp[*].startTime = uniform(0s,0.02s)
+*.ueD2DTx[0..2].udpApp[*].destAddress = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
+*.ueD2DTx[0..2].udpApp[*].destPort = 1000
+# Receivers
+*.ueD2DRx[0..2].udpApp[*].typename = "VoIPReceiver"
+*.ueD2DRx[0..2].udpApp[*].localPort = 1000
+
+# 2 D2D CBR users.
+**.ueD2DTx[3..4].udpApp[0].typename = "UDPBasicApp"
+**.ueD2DTx[3..4].udpApp[0].destAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
+**.ueD2DTx[3..4].udpApp[0].destPort = 1000
+**.ueD2DTx[3..4].udpApp[0].sendInterval = 1s # 
+**.ueD2DTx[3..4].udpApp[0].messageLength = 5000B # 5kB/s
+
+**.ueD2DRx[3..4].udpApp[0].typename = "UDPSink"
+**.ueD2DRx[3..4].udpApp[0].localPort = 1000
 
 ### FTP VIA TCP TRAFFIC ###
 [Config TrafficTCPFTP]
@@ -349,6 +399,6 @@ extends = testRNGSeedInfluence
 
 
 [Config tuGameTest]
-extends = testRNGSeedInfluence
-**.schedulingDisciplineUl = "STACKELBERG_GAME"
-**.schedulingDisciplineDl = "STACKELBERG_GAME"
+extends = TrafficMixed
+**.schedulingDisciplineUl = "TU_GAME"
+**.schedulingDisciplineDl = "TU_GAME"
