--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -54,7 +54,7 @@ network=FrequencyNetwork
 *.eNodeB.mobility.initialY = 300m
 
 *.ue*[*].mobility.initialX = uniform(290m,310m)
-*.ue*[*].mobility.initialY = uniform(340m,350m)
+*.ue*[*].mobility.initialY = uniform(310m,330m)
 
 ### Default scheduling discipline.
 **.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
@@ -149,7 +149,7 @@ extends = Base
 **.ueCell[3..4].udpApp[0].destAddresses = "server"
 **.ueCell[3..4].udpApp[0].destPort = 1000
 **.ueCell[3..4].udpApp[0].sendInterval = 1s # 
-**.ueCell[3..4].udpApp[0].messageLength = 5000B # 5kB/s
+**.ueCell[3..4].udpApp[0].messageLength = 250B # 2kbps
 
 # Server as endpoint.
 **.server.numUdpApps = 2
@@ -174,8 +174,8 @@ extends = Base
 **.ueD2DTx[3..4].udpApp[0].typename = "UDPBasicApp"
 **.ueD2DTx[3..4].udpApp[0].destAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
 **.ueD2DTx[3..4].udpApp[0].destPort = 1000
-**.ueD2DTx[3..4].udpApp[0].sendInterval = 1s # 
-**.ueD2DTx[3..4].udpApp[0].messageLength = 5000B # 5kB/s
+**.ueD2DTx[3..4].udpApp[0].sendInterval = 1s 
+**.ueD2DTx[3..4].udpApp[0].messageLength = 250B # 2kbps
 
 **.ueD2DRx[3..4].udpApp[0].typename = "UDPSink"
 **.ueD2DRx[3..4].udpApp[0].localPort = 1000
@@ -402,3 +402,4 @@ extends = testRNGSeedInfluence
 extends = TrafficMixed
 **.schedulingDisciplineUl = "TU_GAME"
 **.schedulingDisciplineDl = "TU_GAME"
+
