prepared sims for LteTUGame

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -4,15 +4,15 @@ tkenv-plugin-path = ../../../inet/etc/plugins
 output-scalar-file-append = false
 debug-on-errors = false
 tkenv-default-config =
-sim-time-limit=3s
+sim-time-limit=60s
 warmup-period=0s
-repeat = 1
+repeat = 20
 **.routingRecorder.enabled = false
 
 ### Statistics.
 output-scalar-file = ${resultdir}/${configname}/rep${repetition}.sca
 output-vector-file = ${resultdir}/${configname}/rep${repetition}.vec
-**.vector-recording = false
+**.vector-recording = true
 seed-set = ${repetition}
 
 ################ Channel parameters #####################
@@ -135,6 +135,9 @@ extends = Base
 *.numUeCell = 5
 *.numUeD2DTx = 5
 *.numUeD2DRx = 5
+**.deployer.numRbDl = 50
+**.deployer.numRbUl = 50
+**.numBands = 50
 
 # 3 VoIP senders.
 *.ueCell[*].numUdpApps = 1
@@ -148,8 +151,8 @@ extends = Base
 **.ueCell[3..4].udpApp[0].typename = "UDPBasicApp"
 **.ueCell[3..4].udpApp[0].destAddresses = "server"
 **.ueCell[3..4].udpApp[0].destPort = 1000
-**.ueCell[3..4].udpApp[0].sendInterval = 1s # 
-**.ueCell[3..4].udpApp[0].messageLength = 250B # 2kbps
+**.ueCell[3..4].udpApp[0].sendInterval = 0.2s 
+**.ueCell[3..4].udpApp[0].messageLength = 50B # 2kbps
 
 # Server as endpoint.
 **.server.numUdpApps = 2
@@ -174,8 +177,8 @@ extends = Base
 **.ueD2DTx[3..4].udpApp[0].typename = "UDPBasicApp"
 **.ueD2DTx[3..4].udpApp[0].destAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
 **.ueD2DTx[3..4].udpApp[0].destPort = 1000
-**.ueD2DTx[3..4].udpApp[0].sendInterval = 1s 
-**.ueD2DTx[3..4].udpApp[0].messageLength = 250B # 2kbps
+**.ueD2DTx[3..4].udpApp[0].sendInterval = 0.2s 
+**.ueD2DTx[3..4].udpApp[0].messageLength = 50B # 2kbps
 
 **.ueD2DRx[3..4].udpApp[0].typename = "UDPSink"
 **.ueD2DRx[3..4].udpApp[0].localPort = 1000
@@ -403,3 +406,19 @@ extends = TrafficMixed
 **.schedulingDisciplineUl = "TU_GAME"
 **.schedulingDisciplineDl = "TU_GAME"
 
+*.eNodeB.mobility.initialX = 300m
+*.eNodeB.mobility.initialY = 300m
+*.ue*[*].mobility.initialX = uniform(290m,310m)
+*.ue*[*].mobility.initialY = uniform(340m,350m)
+
+
+[Config tuGameTestComparisonRR]
+extends = TrafficMixed
+**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
+**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
+
+
+[Config tuGameTestComparisonPF]
+extends = TrafficMixed
+**.schedulingDisciplineUl = "PF"
+**.schedulingDisciplineDl = "PF"
